<resources>
    <string name="app_name">Karya Setu</string>

    <string name="signup">SIGN UP</string>
    <string name="login">LOGIN</string>

    <string name="index_heading1">HELLO THERE,</string>
    <string name="index_heading2">WELCOME</string>

    <string name="signup_heading1">Hello</string>
    <string name="signup_heading2">Please Sign</string>
    <string name="signup_heading3">Up</string>

    <string name="login_heading1">Hello</string>
    <string name="login_heading2">Please Login</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="success_title_dialogbox">Success!</string>
    <string name="success_dialogbox_text">Registration Successful!</string>
    <string name="job_seeker">Job Seeker,</string>
    <string name="job_seeker_signup">Job Seeker,</string>

    <string name="employer">Employer,</string>
    <string name="login_for_job_seekers">Login For Job Seekers</string>
    <string name="login_for_employers">Login For Employers</string>
    <string name="login_with_google">Login with Google</string>

    <string name="client_id">998294348932-u1ct0t0h9jhm0vse8bbtm8kiocedpl2h.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="my_job_posts">My Job Posts</string>
    <string name="applicants">Applicants</string>
    <string name="profile">Profile</string>

    <string name="view_and_update_profile">View &amp; Update Profile Details</string>
    <string name="firstname_profilepage">First Name</string>
    <string name="profile_toolbar">Profile</string>
    <string name="delete_user">Delete User</string>
    <string name="log_out">Log Out</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_and_update_work_experience">View &amp; Update Work Experience</string>
    <string name="view_and_update_professional_profile">View &amp; Update Professional Profile</string>
    <string name="view_and_manage_job_listings">View &amp; Manage Job Listings</string>
    <string name="view_amp_manage_applications"><![CDATA[View & Manage Applications]]></string>
    <string name="view_and_update_company_details">View &amp; Update Company Details</string>
    <string name="view_short_listed_applicants">View Short-Listed Applicants</string>
    <string name="company_name">Company Name</string>
    <string name="delete_account">Delete Account</string>
    <string name="home_toolbar">Home</string>
    <string name="no_job_listing_found">No Job Listing Found</string>
    <string name="welcome_employer">Welcome, Employer!</string>
    <string name="home_emp">Home</string>
    <string name="total_applications">Total Applications</string>
    <string name="active_job_listings_emp">Active Job Listings</string>
    <string name="interviews_scheduled">Interviews Scheduled</string>
    <string name="recent_applications">Recent Applications</string>
    <string name="no_recent_applications_were_found">No recent applications were found</string>
    <string name="no_jobs_found">No Jobs Found</string>
    <string name="job_listings">Job Listings</string>
    <string name="filter_jobs">Filter Jobs</string>
    <string name="location">Location</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="applications">Applications</string>
    <string name="no_jobs_applied_yet">No Jobs Applied Yet</string>
    <string name="my_job_posts_emp">My Job Posts</string>
    <string name="no_jobs_posted_yet">No Jobs Posted Yet</string>
    <string name="no_applicants_found_yet">No Applicants Found Yet</string>
    <string name="applicants_emp">Applicants</string>
    <string name="hired_candidates">Hired Candidates</string>
    <string name="total_applications_emp">Total Applications</string>
    <string name="active_job_listings">Active Job Listings</string>
    <string name="welcome_employer_emp">Welcome, Employer!</string>
    <string name="full_name">Full Name</string>
    <string name="job_title">Job Title</string>
    <string name="company_name_emp">Company Name</string>
    <string name="salary">Salary</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>