<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_jobs"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="@dimen/_15sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:textStyle="bold"
        android:paddingTop="10dp"/>

    <Spinner
        android:id="@+id/spinner_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/apply_filters_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_filters"
        android:textColor="#EEEEEE"
        android:textSize="@dimen/_13sdp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="20dp"/>
</LinearLayout>
