<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_12sdp"
    app:cardElevation="@dimen/_4sdp"
    android:background="#EEEEEE"
    android:padding="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/job_title_jobapply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_10sdp" />

        <TextView
            android:id="@+id/company_name_jobapply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name_emp"
            android:textSize="@dimen/_12sdp"
            android:textColor="#727D73"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_below="@id/job_title_jobapply"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp" />

        <TextView
            android:id="@+id/job_salary_jobapply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary"
            android:textSize="@dimen/_12sdp"
            android:textColor="#727D73"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_below="@id/company_name_jobapply"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp" />

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical">

            <Button
                android:id="@+id/jobapply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apply"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:background="@drawable/blue_button_background"
                android:layout_marginBottom="@dimen/_5sdp" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
