<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragmentForEmployer"
    android:background="#EEEEEE">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#08C2FF"
        android:padding="10dp"
        android:id="@+id/toolbar">

        <TextView
            android:id="@+id/toolbar_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/home_emp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textColor="#EEEEEE"
            android:textSize="@dimen/_20sdp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_text_home_emp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_employer_emp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#333333"
                android:paddingBottom="8dp"/>

            <!-- Job Statistics Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txt_active_job_listings_home_emp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textSize="@dimen/_20sdp"
                            android:textStyle="bold"/>

                        <TextView
                            android:text="@string/active_job_listings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textSize="@dimen/_13sdp"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txt_total_applications_home_emp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textSize="@dimen/_20sdp"
                            android:textStyle="bold"/>

                        <TextView
                            android:text="@string/total_applications_emp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_13sdp"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txt_interviews_scheduled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textSize="@dimen/_20sdp"
                            android:textStyle="bold"/>

                        <TextView
                            android:text="@string/interviews_scheduled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textSize="@dimen/_11sdp"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txt_hired_candidates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textSize="@dimen/_20sdp"
                            android:textStyle="bold"/>

                        <TextView
                            android:text="@string/hired_candidates"
                            android:fontFamily="@font/montserrat_semibold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_14sdp"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recent_applications"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:textColor="#333333"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_recent_applications_emp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"/>

            <TextView
                android:id="@+id/txt_no_recent_applications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_recent_applications_were_found"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="@dimen/_20sdp"
                android:textColor="#333333"
                android:gravity="center"
                android:padding="16dp"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Large"/>

</RelativeLayout>
