<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EEEEEE"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragmentForEmployer">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#08C2FF"
    android:padding="10dp"
    android:id="@+id/toolbar">

    <TextView
        android:id="@+id/toolbar_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/profile_toolbar"
        android:layout_marginStart="@dimen/_20sdp"
        android:textColor="#EEEEEE"
        android:textSize="@dimen/_20sdp" />

</RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp">

            <ImageView
                android:id="@+id/organizationprofile_emp"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/organization"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/companyname_textview_profile"
                android:text="@string/company_name"
                android:textSize="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/organizationprofile_emp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardUpdateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/companyname_textview_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/updatecompanydetails_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_and_update_company_details"
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="@dimen/_18sdp"
                        android:padding="@dimen/_15sdp"
                        android:layout_centerVertical="true" />

                    <ImageButton
                        android:id="@+id/updatecompanydetails_rightbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/right_button_24px" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardManagejoblistings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardUpdateProfile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/managejoblistings_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_and_manage_job_listings"
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="@dimen/_18sdp"
                        android:padding="@dimen/_15sdp"
                        android:layout_centerVertical="true" />

                    <ImageButton
                        android:id="@+id/managejoblistings_rightbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/right_button_24px" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewandmanageapplications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardManagejoblistings"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/viewandmanageapplications_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_amp_manage_applications"
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="@dimen/_18sdp"
                        android:padding="@dimen/_15sdp"
                        android:layout_centerVertical="true" />

                    <ImageButton
                        android:id="@+id/viewandmanageapplications_rightbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/right_button_24px" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewshortlistedapplications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardViewandmanageapplications"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/appliedjobs_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_short_listed_applicants"
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="@dimen/_18sdp"
                        android:padding="@dimen/_15sdp"
                        android:layout_centerVertical="true" />

                    <ImageButton
                        android:id="@+id/appliedjobs_rightbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/right_button_24px" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/button_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardViewshortlistedapplications"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_centerHorizontal="true"
                android:padding="10dp">

                <Button
                    android:id="@+id/delete_companyuser_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/red_button_background"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="#FFFFFF"
                    android:text="@string/delete_account"
                    android:textSize="@dimen/_15sdp"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_6sdp" />

                <Button
                    android:id="@+id/logout_button_emp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/delete_companyuser_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/red_button_background"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="#FFFFFF"
                    android:text="@string/log_out"
                    android:textSize="@dimen/_15sdp"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_6sdp" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>